[tool.poetry]
name = "local-forward-gradient"
version = "0.1.0"
description = ""
authors = ["D. Debnath <d_debnath@outlook.com>"]
readme = "README.md"
packages = [{include = "local_forward_gradient"}]

[tool.poetry.dependencies]
python = ">=3.10,<3.12"
jax = "^0.4.8"
tensorflow = "^2.12.0"
tensorflow-datasets = "^4.9.1"
optax = "^0.1.4"
einops = "^0.6.0"
flax = "^0.6.8"
clu = "^0.0.8"
absl-py = "^1.4.0"
protobuf = "~3.20"
torch = "^2.0.0"


[tool.poetry.group.dev.dependencies]
black = "^23.3.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
